[package]
name = "url-shorter"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.11.0"
mimalloc = "0.1.29"
url = "2.2.2"
uuid = { version = "1.0.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
