[package]
name = "url-shorter"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.11.0"
mimalloc = "0.1.29"
url = "2.2.2"
uuid = { version = "1.1.2", features = ["v4"] }
num_cpus = "1.13.1"
parking_lot = "0.12.1"

[profile.release]
lto = true
codegen-units = 1
